--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,8 +1,68 @@
 $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
+@import url(http://fonts.googleapis.com/css?family=Oldenburg|Raleway:500);
 // bower:scss
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
 
+//================//
+// Define fonts   //
+//================//
+@font-face {
+  font-family: citizenSlab;
+  src: url(fonts/citizen_slab.otf);
+}
+
+//================//
+// Define Sass Vars//
+//================//
+
+/*font stacks*/
+$font-stack-body:'Raleway', Arial,"Helvetica Neue",Helvetica,sans-serif;
+$font-stack-header:'citizenSlab', Rockwell,"Courier Bold",Courier,Georgia,Times,"Times New Roman",serif;
+
+/*color vars*/
+$color-turquoise: #1abc9c;
+$color-green-sea: #16a085;
+$color-emerald: #2ecc71;
+$color-nephritis: #2ecc71;
+$color-peter-river: #3498db;
+$color-belize-hole: #2980b9;
+$color-amethyst: #9b59b6;
+$color-wisteria: #8e44ad;
+$color-pomegranate: #c0392b;
+$color-alizarin: #e74c3c;
+$color-pumpkin: #d35400;
+$color-carrot: #e67e22;
+$color-orange: #f39c12;
+$color-sunflower: #f1c40f;
+$color-wet-asphalt: #34495e;
+$color-midnight-blue: #2c3e50;
+$color-asbestos: #7f8c8d;
+$color-concrete: #95a5a6;
+$color-silver: #bdc3c7;
+$color-clouds: #ecf0f1;
+$color-tan-light: #C2B49A;
+$color-tan-brown: #A59275;
+$color-tan-gray: #716659;
+$color-tan-dark: #47413A;
+$color-tan-black: #252525;
+
+/*font colors*/
+$font-color-base: #333;
+$font-color-header: #333;
+$font-color-subheader: #333;
+
+/*panel colors*/
+$bg-color-body: #333;
+$bg-color-aside: #333;
+$bg-color-main: #333;
+$bg-color-section: #333;
+$bg-color-tab: #333;
+
+
+//================//
+// Base setup ====//
+//================//
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
@@ -10,16 +70,16 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
   padding: 0.2em 0;
 }
 
-//================//
-// Define Sass Vars//
-//================//
-
-
-//================//
-// Base setup ====//
-//================//
 body {
   padding: 0;
+  font-family: $font-stack-body;
+}
+
+h1,h2,h3{
+  font-family: $font-stack-header;
+}
+h4,h5{
+  font-family: $font-stack-header;
 }
 
 //================//
@@ -32,5 +92,5 @@ body {
 //================//
 
 //================//
-// Header styles  //
+// Footer styles  //
 //================//
