add a working aside menu

--- a/app/partials/event/event.html
+++ b/app/partials/event/event.html
@@ -1,5 +1,5 @@
 <!-- partials/event/event.html -->
-<div class="main">
+<div class="">
   <H2>OUR PAGES</H2>
   <a ui-sref="event.koreaburn2015"><h4>Korea Burn 2015</h4></a>
 
