--- a/app/partials/main.html
+++ b/app/partials/main.html
@@ -1,5 +1,5 @@
 <!-- partials/main.html -->
-  <div class="main">
+  <div class="">
     <ul>
       <li class="col-xs-4"><a ui-sref="event.koreaburn2015">
         <div class="img-overlay">
