--- a/app/partials/event/event.koreaburn2015.html
+++ b/app/partials/event/event.koreaburn2015.html
@@ -59,8 +59,8 @@
       <p>
         If this is your first visit to this site, a good starting point is the FAQ page, the glossary, and the timeline. From here you can stroll through the carefully archived sections for each year. Community, participation, self-expression, self-reliance; these tenets of Burning Man are lifeblood of the Burning Man experience. Whether you are new to this site or are returning for your umpteenth visit, you are encouraged to delve into these pages to expand your viewpoint and definition of these ideals, and to connect with yourself to find your niche in our community. The giving of yourself is the greatest gift you can give to the Burning Man community, and is imperative to the survival of this unique experiment.
       </p>
-      <p>source : Burning Man www.burningman.com</p>
-      <a href="http://goo.gl/zluxlg">http://goo.gl/zluxlg</a>
+      <p><a href="http://burningman.org/network/about-us/">Find out more here!</a></p>
+      <p>source : Burning Man <a href="www.burningman.com">www.burningman.com</a></p>
     </div>
   </tab>
 
