--- a/app/partials/main.html
+++ b/app/partials/main.html
@@ -1,7 +1,7 @@
 <!-- partials/main.html -->
   <div class="">
     <ul>
-      <li class="col-xs-4"><a ui-sref="event.koreaburn2015">
+      <li class="col-xs-4"><a ui-sref="event">
         <div class="img-overlay">
           <img src="images/thumb-1.png" class="img-responsive"/>
           <div class="project-overlay"><h3>Event</h3></div>
