starting from scratch on main page pictoral nav

--- a/app/partials/main.html
+++ b/app/partials/main.html
@@ -1,26 +1,25 @@
 <!-- partials/main.html -->
-  <div class="">
-    <ul>
-      <li class="col-xs-4"><a ui-sref="event">
-        <div class="img-overlay">
-          <img src="images/thumb-1.png" class="img-responsive"/>
-          <div class="project-overlay"><h3>Event</h3></div>
-        </div>
-      </a></li>
-      <li class="col-xs-4"><a ui-sref="culture">
-        <div class="img-overlay">
-          <img src="images/thumb-2.png" class="img-responsive"/>
-          <div class="project-overlay"><h3>Culture</h3></div>
-        </div>
-      </a></li>
-      <li class="col-xs-4"><a ui-sref="info">
-        <div class="img-overlay">
-          <img src="images/thumb-3.png" class="img-responsive"/>
-          <div class="project-overlay"><h3>Info</h3></div>
-        </div>
-      </a></li>
-    </ul>
+<div class="content-links">
+  <div class="short">
+    <img src="images/thumb-1.png" class="img-responsive"/>
+    <div class="mask">
+      <a ui-sref="event"><h1>Event</h1></a>
+    </div>
   </div>
+  <div class="short">
+    <img src="images/thumb-2.png" class="img-responsive"/>
+    <div class="mask">
+      <a ui-sref="culture"><h1>Culture</h1></a>
+    </div>
+  </div>
+  <div class="short">
+    <img src="images/thumb-3.png" class="img-responsive"/>
+    <div class="mask">
+      <a ui-sref="info"><h1>Info</h1></a>
+    </div>
+  </div>
+
+</div>
 
 <div id="burn-intro" class="main-section">
 </div>
