added links to home page

--- a/app/partials/main.html
+++ b/app/partials/main.html
@@ -17,20 +17,20 @@
     </div>
   </div>
   <div class="banner hidden-xs">
-    <p>Welcome to</p>
+    <p>Filler text</p>
     <img class="img-responsive" src="images/logo-1.png" alt="Korea Burn Logo"/>
-    <p>Korea Burn</p>
+    <p>Filler text</p>
   </div>
   <div class="info row">
 
     <div class="info-news col-xs-12 col-sm-5">
-      <div class="info-news-nav">
-        <h4>update 1</h4>
-        <h4>update 2</h4>
-        <h4>update 3</h4>
-        <h4>update 4</h4>
-        <h4>update 5</h4>
-      </div>
+      <h4>Updates</h4>
+      <ul class="info-news-link">
+        <li ui-sref="news.article"><p><span class="date">04.20.15 -</span> The color scheme asdfasdfasdfasdfasof this site is dreadful.</p></li>
+        <li ui-sref="news.article"><p><span class="date">04.18.15 -</span> I'm not exactly sure what's happening. asdfasdfasdfasdfasdf</p></li>
+        <li ui-sref="news.article"><p><span class="date">04.01.15 -</span> Rich's April Fool's joke is deemed stupid! asdfasfdadsfasdfasdfadsf</p></li>
+        <li ui-sref="news.article"><p><span class="date">02.06.14 -</span> Come join for filler? asdfasdfasdfasdfasdfasdfasdfasdfasdfasdf</p></li>
+      </ul>
     </div>
     <div class="info-carousel row col-xs-12 col-sm-7">
       <carousel interval="myInterval">
@@ -44,6 +44,5 @@
       </carousel>
     </div>
   </div>
-
 
 </div>
